--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Modules as a Concepts</title>
 </head>
 
-<body>git 
+<body>
     <h1>Fun with Modules!</h1>
     <nav data-module="nav">
         <!-- nav elements must have nav-item -->
